--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -30,6 +30,10 @@
   color: $primary-color;
 }
 
+.round-img {
+  border-radius: 50%;
+}
+
 // backgrounds
 .bg {
   &-primary {
@@ -118,6 +122,31 @@
   &.alert-danger {
     @include set-background($danger-color);
   }
+}
+
+//badges
+.badge {
+  font-size: 0.8rem;
+  padding: 0.1rem;
+  text-align: center;
+  margin: 0.3rem;
+  background: $light-color;
+  color: #333;
+
+  
+  &.badge-primary {
+    @include set-background($primary-color);
+  }
+  &.badge-dark {
+    @include set-background($dark-color);
+  }
+  &.badge-success {
+    @include set-background($success-color);
+  }
+  &.badge-danger {
+    @include set-background($danger-color);
+  }
+  
 }
 
 .dark-overlay {
