--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -61,6 +61,7 @@
 // buttons
 
 .btn {
+  display: inline-block;
   background: $light-color;
   color: #333;
   padding: 0.4rem 1.3rem;
@@ -161,4 +162,16 @@
     ),
     $alpha: 0.7
   );
+}
+
+.table {
+  th,
+  td {
+    padding: 1rem;
+    text-align: left;
+  }
+
+  th {
+    background: $light-color;
+  }
 }
